<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="90dp"
        android:hint="@string/enter_first_number"/>

    <EditText
        android:id="@+id/secondEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="90dp"
        android:layout_below="@id/firstEditText"
        android:hint="@string/enter_second_number"/>
    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondEditText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:text="@string/addition"/>

    <Button
        android:id="@+id/subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:text="@string/subtraction"/>
    <Button
        android:id="@+id/multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtract"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:text="@string/multiplication"/>
    <Button
        android:id="@+id/divide"
        android:padding="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/multiply"
        android:layout_marginTop="20dp"
        android:text="@string/division"/>

    <TextView
        android:id="@+id/outputLabel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/divide"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/output"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="150dp"
        android:layout_marginStart="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/divide"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:textSize="20sp"
        android:gravity="center"/>


</RelativeLayout>